--- a/index.html
+++ b/index.html
@@ -848,6 +848,8 @@ window.location.href = resultURL;
     loadState();
   }
 };
+			
+			redirectToResultIfPlayedToday();
 		</script>
 	</body>
 </html>
