--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 22, 2023</span></li><li>Crickdle #32</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 23, 2023</span></li><li>Crickdle #33</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
 					</div>
 				</div>
 			</div>
@@ -521,15 +521,15 @@
 			}
 			
 			const gameDetails = {
-				nation1: "Australia",
-				nation2: "India",
-				date: "Jan 2-6, 2008",
-				venue: "Sydney",
-				score: "Australia 463 & 401/7d, India (T: 333) 532 & 210; Australia won by 122 runs",
-				crickdlequestion: "Australia player scored 162* & 61 and took 3/51 in this match?"
+				nation1: "England",
+				nation2: "New Zealand",
+				date: "May 24-28, 2013",
+				venue: "Leeds",
+				score: "England 354 & 287/5d, New Zealand (T: 468) 174 & 220; England won by 247 runs",
+				crickdlequestion: "England player scored 26* and took 4/42 & 6/90 in this match?"
 			};
 
-			const correctPlayer = ["SYMONDS"];
+			const correctPlayer = ["SWANN"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
