--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 23, 2023</span></li><li>Crickdle #33</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 24, 2023</span></li><li>Crickdle #34</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
 					</div>
 				</div>
 			</div>
@@ -533,14 +533,14 @@
 			
 			const gameDetails = {
 				nation1: "England",
-				nation2: "New Zealand",
-				date: "May 24-28, 2013",
-				venue: "Leeds",
-				score: "England 354 & 287/5d, New Zealand (T: 468) 174 & 220; England won by 247 runs",
-				crickdlequestion: "England player scored 26* and took 4/42 & 6/90 in this match?"
+				nation2: "India",
+				date: "Aug 18-22, 2018",
+				venue: "Nottingham",
+				score: "India 329 & 352/7d, England (T: 521) 161 & 317; India won by 203 runs",
+				crickdlequestion: "India player scored 97 & 103 in this match?"
 			};
 
-			const correctPlayer = ["SWANN"];
+			const correctPlayer = ["KOHLI"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
