--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
 				margin-bottom: 1.5rem;
 				padding: 10px;
 			}
+			
+						#question {
+				text-align: center;
+				font-family: InterTight, sans-serif;
+				width: 90%;
+				max-width: 600px;
+				border-radius: 0.5rem;
+				margin: auto;
+				background-color: #f7f7f7;
+				margin-bottom: 1.5rem;
+				padding: 10px;
+			}
 		
 			#match-details p {
 				margin: 0.2rem 0;
@@ -495,7 +507,9 @@
 		</div>
 		<div id="guess-section">
 			<div class="game-container">
-				<h2><span style="font-weight: 500"><span style="color: #000000">Which <span id="crickdlequestion"></span></span></span></h2>
+				<div id="question">
+				<h2><span style="font-weight: 500"><span style="color: #ffffff">Which <span id="crickdlequestion"></span></span></span></h2>
+					</div>
 			<div class="guess-input">
 				<input type="text" id="guess1">
 				<button id="submit1"><span style="font-weight: 500">&rArr;</span></button>
