--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 		</div>
 		<div id="guess-section">
 			<div class="game-container">
-				<h2><span style="font-weight: 500"><span style="color: #ffffff">Which <span id="crickdlequestion"></span></span></span></h2>
+				<h2><span style="font-weight: 500"><span style="color: #000000">Which <span id="crickdlequestion"></span></span></span></h2>
 			<div class="guess-input">
 				<input type="text" id="guess1">
 				<button id="submit1"><span style="font-weight: 500">&rArr;</span></button>
