--- a/index.html
+++ b/index.html
@@ -446,26 +446,33 @@
 				box-shadow: 0 0 0 3px rgba(40, 167, 69, 0.5);
 			}
 			
-			.speech-bubble {
-  position: relative;
-  background-color: #f0f0f0;
-  border-radius: 10px;
-  padding: 10px;
-  width: 80%;
-  max-width: 500px;
-}
-
-.speech-bubble:after {
-  content: '';
+			/* Style for the speech bubble container */
+.speech-bubble {
   position: absolute;
   top: 50%;
-  right: 100%;
-  margin-top: -10px;
-  border-width: 10px;
-  border-style: solid;
-  border-color: transparent #f0f0f0 transparent transparent;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  max-width: 600px;
+  background-color: #fff;
+  border: 2px solid #000;
+  border-radius: 10px;
+  padding: 20px;
+  box-sizing: border-box;
+  text-align: center;
 }
-			
+
+/* Style for the speech bubble tail */
+.speech-bubble:before {
+  content: "";
+  position: absolute;
+  top: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-style: solid;
+  border-width: 20px 20px 0 20px;
+  border-color: #000 transparent transparent transparent;
+}			
 		</style>
 	</head>
 	<body>
