--- a/index.html
+++ b/index.html
@@ -446,7 +446,32 @@
 				box-shadow: 0 0 0 3px rgba(40, 167, 69, 0.5);
 			}
 			
-			
+			/* Speech Bubble Container */
+.speech-bubble {
+  position: relative;
+  width: 90%;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #FFFFFF;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+/* Speech Bubble Triangle */
+.speech-bubble:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -20px;
+  transform: translateY(-50%);
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 10px 20px 10px 0;
+  border-color: transparent #FFFFFF transparent transparent;
+}						
 		</style>
 	</head>
 	<body>
