--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
-	color: #1dc278;
+	background-color: #1dc278;
   border-radius: 20px;
   text-align: center;
 }
