--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
   height: 0;
   border-style: solid;
   border-width: 10px 20px 10px 0;
-  border-color: transparent #FFFFFF transparent transparent;
+  border-color: #1dc278;
 }						
 		</style>
 	</head>
@@ -521,7 +521,7 @@
 		<div id="guess-section">
 			<div class="game-container">
 				<div class="speech-bubble">
-				<h2><span style="font-weight: 500"><span style="color: #000000">Which <span id="crickdlequestion"></span></span></span></h2>
+				<h2><span style="font-weight: 500"><span style="color: #ffffff">Which <span id="crickdlequestion"></span></span></span></h2>
 				</div>
 			<div class="guess-input">
 				<input type="text" id="guess1">
