--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
   margin: 0 auto;
   padding: 20px;
 	background-color: #1dc278;
-  border-radius: 20px;
+  border-radius: 0.5rem;
   text-align: center;
 }
 
@@ -469,7 +469,7 @@
   height: 0;
   border-style: solid;
   border-width: 10px 20px 10px 0;
-  border-color: #1dc278;
+	  border-color: transparent #1dc278 transparent transparent;
 }						
 		</style>
 	</head>
