--- a/index.html
+++ b/index.html
@@ -446,19 +446,20 @@
 				box-shadow: 0 0 0 3px rgba(40, 167, 69, 0.5);
 			}
 			
-			/* Speech Bubble Container */
 .speech-bubble {
   position: relative;
   width: 90%;
   max-width: 600px;
   margin: 0 auto;
   padding: 10px;
-	background-color: #1dc278;
+  background-color: #1dc278;
   border-radius: 0.5rem;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-/* Speech Bubble Triangle */
 .speech-bubble:before {
   content: "";
   position: absolute;
