--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
 				margin-bottom: 1.5rem;
 				padding: 10px;
 			}
+			
+			#speech-bubble {
+				text-align: center;
+				font-family: InterTight, sans-serif;
+				width: 90%;
+				max-width: 600px;
+				border-radius: 0.5rem;
+				margin: auto;
+				background-color: #1dc278;
+				margin-bottom: 1.5rem;
+				padding: 10px;
+			}
 		
 			#match-details p {
 				margin: 0.2rem 0;
@@ -444,34 +456,7 @@
 			#cookieConsent button:focus {
 				outline: none;
 				box-shadow: 0 0 0 3px rgba(40, 167, 69, 0.5);
-			}
-			
-.speech-bubble {
-  position: relative;
-  width: 90%;
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 10px;
-  background-color: #1dc278;
-  border-radius: 0.5rem;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.speech-bubble:before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: -20px;
-  transform: translateY(-50%);
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 10px 20px 10px 0;
-  border-color: transparent #1dc278 transparent transparent;
-}						
+			}						
 		</style>
 	</head>
 	<body>
