--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				padding: 10px;
 			}
 			
-			#speech-bubble {
+			.speech-bubble {
 				text-align: center;
 				font-family: InterTight, sans-serif;
 				width: 90%;
