--- a/index.html
+++ b/index.html
@@ -108,18 +108,6 @@
 				margin-bottom: 1.5rem;
 				padding: 10px;
 			}
-			
-			.speech-bubble {
-				text-align: center;
-				font-family: InterTight, sans-serif;
-				width: 90%;
-				max-width: 600px;
-				border-radius: 0.5rem;
-				margin: auto;
-				background-color: #1dc278;
-				margin-bottom: 1.5rem;
-				padding: 10px;
-			}
 		
 			#match-details p {
 				margin: 0.2rem 0;
@@ -507,7 +495,7 @@
 		<div id="guess-section">
 			<div class="game-container">
 				<div class="speech-bubble">
-				<h2><span style="font-weight: 500"><span style="color: #ffffff">Which <span id="crickdlequestion"></span></span></span></h2>
+				<h2><span style="font-weight: 500"><span style="color: #000000">Which <span id="crickdlequestion"></span></span></span></h2>
 				</div>
 			<div class="guess-input">
 				<input type="text" id="guess1">
