--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 		</header>
 		<div id="match-details">
 			<p><span id="nation1"></span> vs <span id="nation2"></span></p>
-			<p><span id="date"></span></p>
+			<p><span id="date"></span>&nbsp;&nbsp;&nbsp;<span id="venue"></span></p>
 			<p><span id="venue"></span></p>
 			<p><span id="score"></span></p>
 		</div>
