--- a/index.html
+++ b/index.html
@@ -486,17 +486,15 @@
 				</div>
 			</div>
 		</header>
+	<h2><span style="font-weight: 500"><span style="color: #000000">Which <span id="crickdlequestion"></span></span></span></h2>
 		<div id="match-details">
 			<p><span id="nation1"></span> vs <span id="nation2"></span></p>
-			<p><span id="date"></span>&nbsp;&nbsp;&nbsp;<span id="venue"></span></p>
+			<p><span id="date"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span id="venue"></span></p>
 			<p><span id="venue"></span></p>
 			<p><span id="score"></span></p>
 		</div>
 		<div id="guess-section">
 			<div class="game-container">
-				<div class="speech-bubble">
-				<h2><span style="font-weight: 500"><span style="color: #000000">Which <span id="crickdlequestion"></span></span></span></h2>
-				</div>
 			<div class="guess-input">
 				<input type="text" id="guess1">
 				<button id="submit1"><span style="font-weight: 500">&rArr;</span></button>
