--- a/index.html
+++ b/index.html
@@ -108,6 +108,26 @@
 				margin-bottom: 1.5rem;
 				padding: 10px;
 			}
+			
+						#question {
+				text-align: center;
+				font-family: InterTight, sans-serif;
+				width: 90%;
+				max-width: 600px;
+				border-radius: 0.5rem;
+				margin: auto;
+				background-color: #ffffff;
+				margin-bottom: 1.5rem;
+				padding: 10px;
+			}
+			
+						#question p {
+				margin: 0.2rem 0;
+				font-size: 1.1rem;
+				font-weight: 500;
+				font-family: InterTight, sans-serif;
+				color: #333;
+			}
 		
 			#match-details p {
 				margin: 0.2rem 0;
@@ -486,7 +506,9 @@
 				</div>
 			</div>
 		</header>
+			<div id="question">
 	<h2><span style="font-weight: 500"><span style="color: #000000">Which <span id="crickdlequestion"></span></span></span></h2>
+				</div>
 		<div id="match-details">
 			<p><span id="nation1"></span> vs <span id="nation2"></span></p>
 			<p><span id="date"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span id="venue"></span></p>
