--- a/index.html
+++ b/index.html
@@ -117,16 +117,7 @@
 				border-radius: 0.5rem;
 				margin: auto;
 				background-color: #ffffff;
-				margin-bottom: 1.5rem;
 				padding: 10px;
-			}
-			
-						#question p {
-				margin: 0.2rem 0;
-				font-size: 1.1rem;
-				font-weight: 500;
-				font-family: InterTight, sans-serif;
-				color: #333;
 			}
 		
 			#match-details p {
@@ -507,7 +498,7 @@
 			</div>
 		</header>
 			<div id="question">
-	<h2><span style="font-weight: 500"><span style="color: #000000">Which <span id="crickdlequestion"></span></span></span></h2>
+	<h2><span style="font-weight: 500"><span style="color: #000000"><span style="font-size: 1.3rem">Which <span id="crickdlequestion"></span></span></span></h2>
 				</div>
 		<div id="match-details">
 			<p><span id="nation1"></span> vs <span id="nation2"></span></p>
