--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 		margin-bottom: 0.5rem;
 		font-size: 1.3rem;
 		font-family: InterTight, sans-serif;
-		font-weight: 700;
+		font-weight: 600;
 		color: #000;
 	}
 		</style>
@@ -485,7 +485,7 @@
 		</header>
 		<div id="match-details">
 			<p><span id="nation1"></span> vs <span id="nation2"></span></p>
-			<p><span id="date"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span id="venue"></span></p>
+			<p><span style="font-weight: 600"><span id="date"></span></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="font-weight: 600"><span id="venue"></span></span></p>
 			<p><span id="venue"></span></p>
 			<p><span id="score"></span></p>
 		</div>
