--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 		</header>
 		<div id="match-details">
 			<p><span id="nation1"></span> vs <span id="nation2"></span></p>
-			<p><span style="font-weight: 600"><span id="date"></span></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="font-weight: 600"><span id="venue"></span></span></p>
+			<p><span id="date"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span id="venue"></span></p>
 			<p><span id="venue"></span></p>
 			<p><span id="score"></span></p>
 		</div>
