--- a/index.html
+++ b/index.html
@@ -334,6 +334,9 @@
 				cursor: pointer;
 				color: #000000;
 				font-family: InterTight, sans-serif;
+				position: absolute;
+top: 0;
+right: 0;
 			}
 
 			.popup2-content {
