--- a/index.html
+++ b/index.html
@@ -260,7 +260,6 @@
 
 			.popup-header {
 				display: flex;
-				justify-content: space-between;
 				align-items: center;
 				margin-bottom: 8px;
 				font-family: InterTight, sans-serif;
@@ -272,15 +271,18 @@
 				color: #1dc278;
 				font-family: InterTight, sans-serif;
 			}
-
+			
 			.popup-close {
-				background: none;
-				border: none;
-				font-size: 30px;
-				cursor: pointer;
-				color: #000000;
-				font-family: InterTight, sans-serif;
-			}
+background: none;
+border: none;
+font-size: 20px;
+cursor: pointer;
+color: #000000;
+font-family: InterTight, sans-serif;
+position: absolute;
+top: 0;
+right: 0;
+}
 
 			.popup-content {
 				margin: 0;
