--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 				margin-left: 1.5rem;
 			}
 			
-				.toolbar-info {
+			.toolbar-info {
 				background: none;
 				border: none;
 				cursor: pointer;
@@ -260,6 +260,7 @@
 
 			.popup-header {
 				display: flex;
+				justify-content: space-between;
 				align-items: center;
 				margin-bottom: 8px;
 				font-family: InterTight, sans-serif;
@@ -271,18 +272,15 @@
 				color: #1dc278;
 				font-family: InterTight, sans-serif;
 			}
-			
+
 			.popup-close {
-background: none;
-border: none;
-font-size: 20px;
-cursor: pointer;
-color: #000000;
-font-family: InterTight, sans-serif;
-position: absolute;
-top: 0;
-right: 0;
-}
+				background: none;
+				border: none;
+				font-size: 30px;
+				cursor: pointer;
+				color: #000000;
+				font-family: InterTight, sans-serif;
+			}
 
 			.popup-content {
 				margin: 0;
