--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
 				border-radius: 8px;
 				box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
 				position: relative;
+				padding-top: 40px;
 			}
 
 			.popup-header {
@@ -280,6 +281,9 @@
 				cursor: pointer;
 				color: #000000;
 				font-family: InterTight, sans-serif;
+				position: absolute; /* Use absolute positioning */
+	top: 8px; /* Set the distance from the top border of the popup */
+	right: 8px; /* Set the distance from the right border of the popup */
 			}
 
 			.popup-content {
@@ -440,9 +444,9 @@ right: 0;
 			
 				#guess-section h2 {
 		margin-bottom: 0.5rem;
-		font-size: 1.2rem;
+		font-size: 1.25rem;
 		font-family: InterTight, sans-serif;
-		font-weight: 600;
+		font-weight: 500;
 		color: #000;
 	}
 		</style>
