--- a/index.html
+++ b/index.html
@@ -277,13 +277,17 @@
 			.popup-close {
 				background: none;
 				border: none;
-				font-size: 30px;
+				font-size: 20px;
 				cursor: pointer;
 				color: #000000;
 				font-family: InterTight, sans-serif;
+								font-weight: 500;
 				position: absolute; /* Use absolute positioning */
 	top: 8px; /* Set the distance from the top border of the popup */
 	right: 8px; /* Set the distance from the right border of the popup */
+				margin: 0; /* Remove default margin */
+	padding: 0; /* Remove default padding */
+}
 			}
 
 			.popup-content {
