--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 				border-radius: 8px;
 				box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
 				position: relative;
-				padding-top: 40px;
+				padding-top: 60px;
 			}
 
 			.popup-header {
@@ -341,8 +341,8 @@
 				color: #000000;
 				font-family: InterTight, sans-serif;
 				position: absolute;
-top: 0;
-right: 0;
+				top: 0;
+				right: 5px;
 			}
 
 			.popup2-content {
