--- a/index.html
+++ b/index.html
@@ -280,6 +280,9 @@
   cursor: pointer;
   color: #000000;
   font-family: InterTight, sans-serif;
+	position: absolute;
+  top: 8px;
+  right: 8px;
 }
 
 			.popup-content {
@@ -334,6 +337,9 @@
   cursor: pointer;
   color: #000000;
   font-family: InterTight, sans-serif;
+		position: absolute;
+  top: 8px;
+  right: 8px;
 }
 
 			.popup2-content {
