--- a/index.html
+++ b/index.html
@@ -472,6 +472,7 @@
 						<h2><span style="font-weight: 500">HOW TO PLAY</span></h2>
 												<button class="popup-close" aria-label="Close">
 						<img src="Close.png" alt="Close pop-up">
+													</button>
 					</div>
 					<div class="popup-content">
 						<p>Based on their stats in this game, guess the cricketer who was 'Player of the Match' in 4 tries.<br><ul><li>Each guess should be the <span style="font-weight: 500">surname</span> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><span style="font-weight: 500">orange</span></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><span style="font-weight: 500">grey</span></span>.
@@ -484,6 +485,7 @@
 						<h2><span style="font-weight: 500">ABOUT</span></h2>
 						<button class="popup2-close" aria-label="Close">
 						<img src="Close.png" alt="Close pop-up">
+							</button>
 					</div>
 					<div class="popup2-content">
 						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 24, 2023</span></li><li>Crickdle #34</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
