--- a/index.html
+++ b/index.html
@@ -342,6 +342,8 @@
   right: 8px;
   width: 24px;
   height: 24px;
+	font-size: 18px;
+	color: #ffffff;
 			}
 
 			.popup2-content {
@@ -483,7 +485,7 @@
 				<div class="popup2">
 					<div class="popup2-header">
 						<h2><span style="font-weight: 500">ABOUT</span></h2>
-						<button class="popup-close" aria-label="Close">&times;</button>
+						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
 						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 24, 2023</span></li><li>Crickdle #34</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
