--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
   position: absolute;
   top: 8px;
   right: 8px;
-	font-size: 1rem;
+	font-size: 2rem;
 	color: #000000;
 			}
 
@@ -340,7 +340,7 @@
   position: absolute;
   top: 8px;
   right: 8px;
-	font-size: 1rem;
+	font-size: 2rem;
 	color: #000000;
 			}
 
@@ -483,7 +483,7 @@
 				<div class="popup2">
 					<div class="popup2-header">
 						<h2><span style="font-weight: 500">ABOUT</span></h2>
-												<button class="popup-close" aria-label="Close">&times;</button>
+												<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
 						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 24, 2023</span></li><li>Crickdle #34</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
