--- a/index.html
+++ b/index.html
@@ -281,8 +281,9 @@
   padding: 0;
   position: absolute;
   top: 8px;
-  right: 16px;
+  right: 20px;
 	font-size: 1.75rem;
+	font-weight: 400;
 	color: #000000;
 			}
 
@@ -339,8 +340,9 @@
   padding: 0;
   position: absolute;
   top: 8px;
-  right: 16px;
+    right: 20px;
 	font-size: 1.75rem;
+	font-weight: 400;
 	color: #000000;
 			}
 
