--- a/result.html
+++ b/result.html
@@ -153,12 +153,17 @@
 			}
 
 			.popup-close {
-				background: none;
-				border: none;
-				font-size: 30px;
-				cursor: pointer;
-				color: #000000;
-				font-family: InterTight, sans-serif;
+				  background: none;
+  border: none;
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 8px;
+  right: 20px;
+	font-size: 1.75rem;
+	font-weight: 400;
+	color: #000000;
 			}
 
 			.popup-content {
@@ -207,12 +212,17 @@
 			}
 
 			.popup2-close {
-				background: none;
-				border: none;
-				font-size: 30px;
-				cursor: pointer;
-				color: #000000;
-				font-family: InterTight, sans-serif;
+		  background: none;
+  border: none;
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 8px;
+  right: 20px;
+	font-size: 1.75rem;
+	font-weight: 400;
+	color: #000000;
 			}
 
 			.popup2-content {
