--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 			#cookieConsent button {
 				border: none;
 				color: #1dc278;
-				background-color: transparent;
+				background-color: none;
 				font-family: 'InterTight', sans-serif;
 				font-size: 1rem;
 				cursor: pointer;
