--- a/index.html
+++ b/index.html
@@ -425,9 +425,11 @@
 			}
 
 			#cookieConsent button {
+				margin-top: 0.5rem;
+					margin-bottom: 0.5rem;
 				border: none;
 				color: #1dc278;
-				background-color: none;
+				background-color: transparent;
 				font-family: 'InterTight', sans-serif;
 				font-size: 1rem;
 				cursor: pointer;
