--- a/index.html
+++ b/index.html
@@ -425,8 +425,12 @@
 			}
 
 			#cookieConsent button {
-				margin-top: 0.5rem;
-					margin-bottom: 0.5rem;
+				margin-top: 0.75rem;
+					margin-bottom: 0.75rem;
+				padding-left: 0;
+				padding-right: 0;
+				margin-left: 0;
+				margin-right: 0;
 				border: none;
 				color: #1dc278;
 				background-color: transparent;
