--- a/index.html
+++ b/index.html
@@ -438,6 +438,14 @@
 				font-size: 1rem;
 				cursor: pointer;
 			}
+			
+			#cookieConsent button.accept {
+	margin-right: 0.5rem;
+}
+
+#cookieConsent button.decline {
+	margin-left: 0.5rem;
+}
 
 			#cookieConsent button:hover {
 				opacity: 0.8;
