--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@
 		<header>
 			<div id="cookieConsent" style="display:none;">
 				<p>We use cookies to understand how our website is used and improve your playing experience.</p>
-				<button onclick="acceptCookies()">ACCEPT</button>
-				<button onclick="declineCookies()">DECLINE</button>
+				<button class="accept" onclick="acceptCookies()">ACCEPT</button>
+				<button class="decline" onclick="declineCookies()">DECLINE</button>
 			</div>
 			<div class="toolbar">
 					<button class="toolbar-info" aria-label="About">
