--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
 				border-radius: 8px;
 				width: 70%;
 				max-width: 250px;
+				height: 15%;
+				max height: 45px;
 				transition: all 0.2s ease-in-out;
 				text-transform: uppercase;
 				font-family: InterTight, sans-serif;
@@ -176,6 +178,8 @@
 				transition: all 0.2s ease-in-out;
 				width: 30%;
 				max-width: 100px;
+				height: 15%;
+				max height: 45px;
 				font-family: InterTight, sans-serif;
 			}
 
@@ -716,6 +720,7 @@
 window.location.href = resultURL;
             } else if (isClose(guess, correctPlayer)) {
                 guessInput.style.backgroundColor = "#e4a404";
+		guessInput.style.color = "white";
                 if (index < 3) {
                     guessInputs[index + 1].querySelector("input").disabled = false;
                     guessInputs[index + 1].querySelector("button").disabled = false;
