--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				width: 70%;
 				max-width: 250px;
 				height: 15%;
-				max height: 100px;
+				max-height: 100px;
 				transition: all 0.2s ease-in-out;
 				text-transform: uppercase;
 				font-family: InterTight, sans-serif;
@@ -179,7 +179,7 @@
 				width: 30%;
 				max-width: 100px;
 				height: 15%;
-				max height: 100px;
+				max-height: 100px;
 				font-family: InterTight, sans-serif;
 			}
 
