--- a/index.html
+++ b/index.html
@@ -467,11 +467,11 @@
     padding: 20px;
     background-color: transparent;
     border: 2px solid #1dc278;
-    border-radius: 5px;
+    border-radius: 10px;
     font-size: 1.2em;
 }
 
-.speech-bubble::after {
+.speech-bubble::before {
     content: "";
     position: absolute;
     left: 20px;
@@ -481,9 +481,24 @@
     border: 10px solid transparent;
     border-top-color: #1dc278;
     border-bottom: 0;
-    border-left: 0;
+    border-right: 0;
     margin-left: -5px;
-    margin-top: -10px;
+    margin-top: -2px;
+}
+
+.speech-bubble::after {
+    content: "";
+    position: absolute;
+    left: 22px;
+    top: 100%;
+    width: 0;
+    height: 0;
+    border: 9px solid transparent;
+    border-top-color: #f0f0f0;
+    border-bottom: 0;
+    border-right: 0;
+    margin-left: -5px;
+    margin-top: -2px;
 }
 		</style>
 	</head>
