--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 		color: #000;
 	}
 			
-			.speech-bubble {
+.speech-bubble {
     position: relative;
     display: inline-block;
     padding: 20px;
@@ -475,30 +475,24 @@
     content: "";
     position: absolute;
     left: 20px;
-    top: 100%;
+    bottom: -20px;
     width: 0;
     height: 0;
-    border: 10px solid transparent;
-    border-top-color: #1dc278;
-    border-bottom: 0;
-    border-right: 0;
-    margin-left: -5px;
-    margin-top: -2px;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 20px solid #1dc278;
 }
 
 .speech-bubble::after {
     content: "";
     position: absolute;
     left: 22px;
-    top: 100%;
+    bottom: -16px;
     width: 0;
     height: 0;
-    border: 9px solid transparent;
-    border-top-color: #f0f0f0;
-    border-bottom: 0;
-    border-right: 0;
-    margin-left: -5px;
-    margin-top: -2px;
+    border-left: 9px solid transparent;
+    border-right: 9px solid transparent;
+    border-top: 18px solid #f0f0f0;
 }
 		</style>
 	</head>
