--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@
     border-left: 9px solid transparent;
     border-right: 9px solid transparent;
     border-top: 18px solid #f0f0f0;
+    z-index: 1;
 }
 		</style>
 	</head>
