--- a/index.html
+++ b/index.html
@@ -472,6 +472,7 @@
 }
 
 .speech-bubble::before {
+	background-color: transparent;
     content: "";
     position: absolute;
     left: 20px;
@@ -484,6 +485,7 @@
 }
 
 .speech-bubble::after {
+	background-color: transparent;
     content: "";
     position: absolute;
     left: 22px;
