--- a/index.html
+++ b/index.html
@@ -469,33 +469,7 @@
     border: 2px solid #1dc278;
     border-radius: 10px;
     font-size: 1.2em;
-}
-
-.speech-bubble::before {
-	background-color: transparent;
-    content: "";
-    position: absolute;
-    left: 20px;
-    bottom: -20px;
-    width: 0;
-    height: 0;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-top: 20px solid #1dc278;
-}
-
-.speech-bubble::after {
-	background-color: transparent;
-    content: "";
-    position: absolute;
-    left: 22px;
-    bottom: -16px;
-    width: 0;
-    height: 0;
-    border-left: 9px solid transparent;
-    border-right: 9px solid transparent;
-    border-top: 18px solid #f0f0f0;
-    z-index: 1;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 20% 100%, 10% 90%, 10% 100%);
 }
 		</style>
 	</head>
