--- a/index.html
+++ b/index.html
@@ -469,7 +469,26 @@
     border: 2px solid #1dc278;
     border-radius: 10px;
     font-size: 1.2em;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 20% 100%, 10% 90%, 10% 100%);
+}
+
+.speech-bubble::before {
+    content: '';
+    position: absolute;
+    left: 25px;
+    bottom: -15px;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 15px solid #1dc278;
+}
+
+.speech-bubble::after {
+    content: '';
+    position: absolute;
+    left: 27px;
+    bottom: -12px;
+    border-left: 9px solid transparent;
+    border-right: 9px solid transparent;
+    border-top: 14px solid transparent;
 }
 		</style>
 	</head>
