--- a/index.html
+++ b/index.html
@@ -464,7 +464,10 @@
 .speech-bubble {
     position: relative;
     display: inline-block;
-    padding: 20px;
+    padding-left: 20px;
+	padding-right: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
     background-color: transparent;
     border: 2px solid #1dc278;
     border-radius: 10px;
