--- a/index.html
+++ b/index.html
@@ -470,10 +470,10 @@
 
 .speech-bubble-svg {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    bottom: -15px;
+    left: 10px;
+    width: 20px;
+    height: 20px;
     pointer-events: none;
 }
 		</style>
@@ -528,9 +528,9 @@
 				 <div class="speech-bubble">
 				<h2>Which <span id="crickdlequestion"></h2>
 					</div>
-					     <svg class="speech-bubble-svg" viewBox="0 0 60 60" preserveAspectRatio="none">
-        <polygon points="0,0 60,0 60,44 12,44 0,60" fill="none" stroke="#1dc278" stroke-width="1.5" />
-    </svg>
+					    <svg class="speech-bubble-svg" viewBox="0 0 60 60" preserveAspectRatio="none">
+            <polygon points="0,0 60,0 60,44 12,44 0,60" fill="none" stroke="#1dc278" stroke-width="1.5" />
+        </svg>
 			<div class="guess-input">
 				<input type="text" id="guess1">
 				<button id="submit1"><span style="font-weight: 500">&rArr;</span></button>
