--- a/index.html
+++ b/index.html
@@ -460,27 +460,6 @@
 		font-weight: 500;
 		color: #000;
 	}
-			
-.speech-bubble {
-    position: relative;
-    display: inline-block;
-    padding: 20px;
-    font-size: 1.2em;
-    background-color: transparent;
-    border: 2px solid #1dc278;
-    border-radius: 10px;
-}
-
-.speech-bubble-triangle {
-    position: absolute;
-    bottom: -12px;
-    left: 20px;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 0 10px 12px 10px;
-    border-color: transparent transparent #1dc278 transparent;
-}
 		</style>
 	</head>
 	<body>
@@ -530,12 +509,10 @@
 		</div>
 		<div id="guess-section">
 			<div class="game-container">
-				<div class="speech-bubble">
-        <h2>Which <span id="crickdlequestion"></span></h2>
-        <div class="speech-bubble-triangle"></div>
-					    <svg class="speech-bubble-svg" viewBox="0 0 60 60" preserveAspectRatio="none">
-            <polygon points="0,0 60,0 60,44 12,44 0,60" fill="none" stroke="#1dc278" stroke-width="1.5" />
-        </svg>
+       <div style="position:relative; padding: 10px; border: 2px solid #1dc278; background-color: transparent; display: inline-block; border-radius: 10px;">
+  <h2 style="margin: 0;">Which <span id="crickdlequestion"></span></h2>
+  <div style="position: absolute; width: 20px; height: 20px; background-color: transparent; top: -10px; left: 30px; border: 2px solid #1dc278; transform: rotate(45deg);"></div>
+</div>
 			<div class="guess-input">
 				<input type="text" id="guess1">
 				<button id="submit1"><span style="font-weight: 500">&rArr;</span></button>
