--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 			<div class="game-container">
        <div style="position:relative; padding: 10px; border: 2px solid #1dc278; background-color: transparent; display: inline-block; border-radius: 10px;">
   <h2 style="margin: 0;">Which <span id="crickdlequestion"></span></h2>
-  <div style="position: absolute; width: 20px; height: 20px; background-color: transparent; top: -10px; left: 30px; border: 2px solid #1dc278; transform: rotate(45deg);"></div>
+  <div style="position: absolute; width: 0; height: 0; border-left: 20px solid transparent; border-right: 20px solid transparent; border-top: 20px solid #1dc278; bottom: -20px; left: calc(50% - 20px);"></div>
 </div>
 			<div class="guess-input">
 				<input type="text" id="guess1">
