--- a/index.html
+++ b/index.html
@@ -462,35 +462,26 @@
 	}
 			
 .speech-bubble {
-    position: relative;
-    display: inline-block;
-    padding: 15px;
-    background-color: transparent;
-    border: 2px solid #1dc278;
-    border-radius: 10px;
-    margin-bottom: 10px;
+  display: inline-block;
+  position: relative;
+  padding: 10px 20px;
+  background-color: transparent;
+  border: 2px solid #1dc278;
+  border-radius: 25px;
+  margin-bottom: 15px;
 }
 
-.speech-bubble::before,
-.speech-bubble::after {
-    content: '';
-    position: absolute;
-    border-style: solid;
-    border-width: 0 10px 10px 10px;
-    border-color: transparent transparent #1dc278 transparent;
-    bottom: -20px;
-}
-
-.speech-bubble::before {
-    left: 20px;
-    margin-left: -12px;
-    border-width: 0 12px 12px 12px;
-    border-color: transparent transparent rgba(29, 194, 120, 0.3) transparent;
-    z-index: -1;
-}
-
-.speech-bubble::after {
-    left: 20px;
+.speech-bubble:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-right: 10px solid #1dc278;
+  left: -8px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 		</style>
 	</head>
