--- a/index.html
+++ b/index.html
@@ -465,7 +465,9 @@
     position: relative;
     display: inline-block;
     padding: 20px;
-    background-color: transparent;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background-color: #f7f7f7;
     border: 2px solid #1dc278;
     border-radius: 10px;
     font-size: 1.2em;
