--- a/index.html
+++ b/index.html
@@ -465,9 +465,7 @@
     position: relative;
     display: inline-block;
     padding: 20px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	background-color: #f7f7f7;
+    background-color: #f7f7f7;
     border-radius: 10px;
     font-size: 1.2em;
 }
@@ -479,6 +477,9 @@
     bottom: -20px;
     width: 0;
     height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 20px solid #f7f7f7;
 }
 
 .speech-bubble::after {
@@ -488,6 +489,9 @@
     bottom: -16px;
     width: 0;
     height: 0;
+    border-left: 9px solid transparent;
+    border-right: 9px solid transparent;
+    border-top: 18px solid #f7f7f7;
     z-index: 1;
 }
 		</style>
