--- a/index.html
+++ b/index.html
@@ -465,9 +465,11 @@
     position: relative;
     display: inline-block;
     padding: 20px;
-    background-color: #f7f7f7;
-    border-radius: 10px;
+    background-color: #cccccc;
+    margin-bottom: 5px;
     font-size: 1.2em;
+    width: 90%;
+    max-width: 600px;
 }
 
 .speech-bubble::before {
@@ -479,7 +481,7 @@
     height: 0;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
-    border-top: 20px solid #f7f7f7;
+    border-top: 20px solid #cccccc;
 }
 
 .speech-bubble::after {
@@ -491,7 +493,7 @@
     height: 0;
     border-left: 9px solid transparent;
     border-right: 9px solid transparent;
-    border-top: 18px solid #f7f7f7;
+    border-top: 18px solid #cccccc;
     z-index: 1;
 }
 		</style>
