--- a/index.html
+++ b/index.html
@@ -465,11 +465,11 @@
     position: relative;
     display: inline-block;
     padding: 20px;
-    background-color: #cccccc;
-    border: none;
+    background-color: #ffffff;
+    margin-bottom: 5px;
+    font-size: 1.2em;
     width: 90%;
     max-width: 600px;
-    margin-bottom: 5px;
 }
 
 .speech-bubble::before {
@@ -481,7 +481,7 @@
     height: 0;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
-    border-top: 20px solid #cccccc;
+    border-top: 20px solid #ffffff;
 }
 
 .speech-bubble::after {
@@ -493,24 +493,8 @@
     height: 0;
     border-left: 9px solid transparent;
     border-right: 9px solid transparent;
-    border-top: 18px solid #f7f7f7;
+    border-top: 18px solid #ffffff;
     z-index: 1;
-}
-
-.speech-bubble::before,
-.speech-bubble::after {
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-.speech-bubble-border {
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    right: -2px;
-    bottom: -2px;
-    border: 2px solid #1dc278;
-    border-radius: 10px;
 }
 		</style>
 	</head>
@@ -561,11 +545,9 @@
 		</div>
 		<div id="guess-section">
 			<div class="game-container">
- <div class="speech-bubble">
-  <div class="speech-bubble-border">
-    <h2>Which <span id="crickdlequestion"></span></h2>
-  </div>
-</div>
+       <div class="speech-bubble">
+        <h2>Which <span id="crickdlequestion"></span></h2>
+    </div>
 			<div class="guess-input">
 				<input type="text" id="guess1">
 				<button id="submit1"><span style="font-weight: 500">&rArr;</span></button>
