--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
     position: relative;
     display: inline-block;
     padding: 20px;
-    background-color: #ffffff;
+    background-color: ##f7f7f7;
     margin-bottom: 5px;
     font-size: 1.2em;
     width: 90%;
@@ -481,7 +481,7 @@
     height: 0;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
-    border-top: 20px solid #ffffff;
+    border-top: 20px solid ##f7f7f7;
 }
 
 .speech-bubble::after {
@@ -493,7 +493,7 @@
     height: 0;
     border-left: 9px solid transparent;
     border-right: 9px solid transparent;
-    border-top: 18px solid #ffffff;
+    border-top: 18px solid ##f7f7f7;
     z-index: 1;
 }
 		</style>
