--- a/index.html
+++ b/index.html
@@ -464,8 +464,11 @@
 .speech-bubble {
     position: relative;
     display: inline-block;
-    padding: 20px;
-    background-color: ##f7f7f7;
+    padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 20px;
+	padding-right: 20px;
+    background-color: #f7f7f7;
     margin-bottom: 5px;
     font-size: 1.2em;
     width: 90%;
@@ -481,7 +484,7 @@
     height: 0;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
-    border-top: 20px solid ##f7f7f7;
+    border-top: 20px solid #f7f7f7;
 }
 
 .speech-bubble::after {
@@ -493,7 +496,7 @@
     height: 0;
     border-left: 9px solid transparent;
     border-right: 9px solid transparent;
-    border-top: 18px solid ##f7f7f7;
+    border-top: 18px solid #f7f7f7;
     z-index: 1;
 }
 		</style>
