--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 	padding-bottom: 10px;
 	padding-left: 20px;
 	padding-right: 20px;
-    background-color: #f7f7f7;
+    background-color: #e3e3e3;
     margin-bottom: 5px;
     font-size: 1.1em;
     width: 90%;
@@ -484,7 +484,7 @@
     height: 0;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
-    border-top: 20px solid #f7f7f7;
+    border-top: 20px solid #e3e3e3;
 }
 
 .speech-bubble::after {
@@ -496,7 +496,7 @@
     height: 0;
     border-left: 9px solid transparent;
     border-right: 9px solid transparent;
-    border-top: 18px solid #f7f7f7;
+    border-top: 18px solid #e3e3e3;
     z-index: 1;
 }
 		</style>
