--- a/index.html
+++ b/index.html
@@ -464,16 +464,16 @@
 .speech-bubble {
     position: relative;
     display: inline-block;
-    padding-top: 20px;
+    padding-top: 18px;
     padding-bottom: 10px;
     padding-left: 20px;
     padding-right: 20px;
     background-color: #e3e3e3;
     margin-bottom: 5px;
     font-size: 1.1em;
-    width: 90%;
-    max-width: 600px;
-    border: 2px solid green;
+    width: 100%;
+    max-width: 660px;
+    border: 2px #1dc278;
 }
 
 .speech-bubble::before {
@@ -485,7 +485,7 @@
     height: 0;
     border-left: 12px solid transparent;
     border-right: 12px solid transparent;
-    border-top: 22px solid green;
+    border-top: 22px #1dc278;
 }
 
 .speech-bubble::after {
