--- a/index.html
+++ b/index.html
@@ -468,12 +468,12 @@
     padding-bottom: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    background-color: #e3e3e3;
+    background-color: #ffffff;
     margin-bottom: 5px;
     font-size: 1.1em;
     width: 100%;
     max-width: 660px;
-    border: 2px #1dc278;
+    border: 2px solid #1dc278;
 }
 
 .speech-bubble::before {
@@ -485,7 +485,7 @@
     height: 0;
     border-left: 12px solid transparent;
     border-right: 12px solid transparent;
-    border-top: 22px #1dc278;
+    border-top: 22px solid #1dc278;
 }
 
 .speech-bubble::after {
