--- a/index.html
+++ b/index.html
@@ -464,16 +464,17 @@
 .speech-bubble {
     position: relative;
     display: inline-block;
-    padding-top: 18px;
+    padding-top: 20px;
     padding-bottom: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    background-color: #ffffff;
+    background-color: transparent;
     margin-bottom: 5px;
     font-size: 1.1em;
-    width: 100%;
-    max-width: 660px;
+    width: 90%;
+    max-width: 600px;
     border: 2px solid #1dc278;
+    border-radius: 10px;
 }
 
 .speech-bubble::before {
@@ -497,7 +498,7 @@
     height: 0;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
-    border-top: 20px solid #e3e3e3;
+    border-top: 20px solid transparent;
     z-index: 1;
 }
 		</style>
