--- a/index.html
+++ b/index.html
@@ -464,17 +464,16 @@
 .speech-bubble {
     position: relative;
     display: inline-block;
-    padding-top: 20px;
+    padding-top: 18px;
     padding-bottom: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    background-color: transparent;
+    background-color: #f7f7f7;
     margin-bottom: 5px;
     font-size: 1.1em;
-    width: 90%;
-    max-width: 600px;
+    width: 100;
+    max-width: 660px;
     border: 2px solid #1dc278;
-    border-radius: 10px;
 }
 
 .speech-bubble::before {
@@ -498,7 +497,7 @@
     height: 0;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
-    border-top: 20px solid transparent;
+    border-top: 20px solid #f7f7f7;
     z-index: 1;
 }
 		</style>
