--- a/index.html
+++ b/index.html
@@ -468,12 +468,13 @@
     padding-bottom: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    background-color: #f7f7f7;
+    background-color: #ffffff;
     margin-bottom: 5px;
     font-size: 1.1em;
     width: 100;
     max-width: 660px;
     border: 2px solid #1dc278;
+    border-radius: 10px;
 }
 
 .speech-bubble::before {
@@ -497,7 +498,7 @@
     height: 0;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
-    border-top: 20px solid #f7f7f7;
+    border-top: 20px solid #ffffff;
     z-index: 1;
 }
 		</style>
