--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 												<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 24, 2023</span></li><li>Crickdle #34</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 25, 2023</span></li><li>Crickdle #35</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
 					</div>
 				</div>
 			</div>
@@ -589,15 +589,15 @@
 			}
 			
 			const gameDetails = {
-				nation1: "England",
-				nation2: "India",
-				date: "Aug 18-22, 2018",
-				venue: "Nottingham",
-				score: "India 329 & 352/7d, England (T: 521) 161 & 317; India won by 203 runs",
-				crickdlequestion: "India player scored 97 & 103 in this match?"
+				nation1: "Pakistan",
+				nation2: "West Indies",
+				date: "Nov 27-Dec 1, 2006",
+				venue: "Karachi",
+				score: "Pakistan 304 & 399/6d, West Indies (T: 444) 260 & 244; Pakistan won by 199 runs",
+				crickdlequestion: "Pakistan player scored 102 & 124 in this match?"
 			};
 
-			const correctPlayer = ["KOHLI"];
+			const correctPlayer = ["YOUSUF"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
