--- a/result.html
+++ b/result.html
@@ -361,6 +361,10 @@
 			</div>
 
 	<script>
+		if (!localStorage.getItem('playedToday')) {
+  window.location.href = 'index.html';
+}
+		
 		const urlParams = new URLSearchParams(window.location.search);
 		const isCorrect = urlParams.get("isCorrect") === "true";
 		const guess1Color = urlParams.get("guess1");
