--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 												<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 25, 2023</span></li><li>Crickdle #35</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 26, 2023</span></li><li>Crickdle #36</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
 					</div>
 				</div>
 			</div>
@@ -589,15 +589,15 @@
 			}
 			
 			const gameDetails = {
-				nation1: "Pakistan",
-				nation2: "West Indies",
-				date: "Nov 27-Dec 1, 2006",
-				venue: "Karachi",
-				score: "Pakistan 304 & 399/6d, West Indies (T: 444) 260 & 244; Pakistan won by 199 runs",
-				crickdlequestion: "Pakistan player scored 102 & 124 in this match?"
+				nation1: "Sri Lanka",
+				nation2: "South Africa",
+				date: "Jul 12-14, 2018",
+				venue: "Galle",
+				score: "Sri Lanka 287 & 190, South Africa (T: 352) 126 & 73; Sri Lanka won by 278 runs",
+				crickdlequestion: "Sri Lanka player scored 158* & 60 in this match?"
 			};
 
-			const correctPlayer = ["YOUSUF"];
+			const correctPlayer = ["KARUNARATNE"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
