--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 		}
 		</script>
 		<title>Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!</title>
-		<link rel="icon" type="image/x-icon" href="favicon.ico">
-		<link rel="apple-touch-icon" sizes="60x60" href="favicon.ico">
+		<link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
+		<link rel="apple-touch-icon" sizes="60x60" href="favicon.ico?v=2">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
 		<meta name="description" content="Crickdle is a daily cricket guessing game. Test your cricket knowledge and guess the cricketer based on their stats.">
