--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 												<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 26, 2023</span></li><li>Crickdle #36</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 27, 2023</span></li><li>Crickdle #37</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
 					</div>
 				</div>
 			</div>
@@ -593,15 +593,15 @@
 			}
 			
 			const gameDetails = {
-				nation1: "Sri Lanka",
-				nation2: "South Africa",
-				date: "Jul 12-14, 2018",
-				venue: "Galle",
-				score: "Sri Lanka 287 & 190, South Africa (T: 352) 126 & 73; Sri Lanka won by 278 runs",
-				crickdlequestion: "Sri Lanka player scored 158* & 60 in this match?"
+				nation1: "Australia",
+				nation2: "England",
+				date: "Dec 26-29, 2010",
+				venue: "Melbourne",
+				score: "Australia 98 & 258, England 513; England won by an innings and 157 runs",
+				crickdlequestion: "England player scored 168* in this match?"
 			};
 
-			const correctPlayer = ["KARUNARATNE"];
+			const correctPlayer = ["TROTT"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
