--- a/result.html
+++ b/result.html
@@ -352,6 +352,8 @@
 			</div>
 
 	<script>
+		const correctPlayer = JSON.parse(localStorage.getItem("correctPlayer"));
+		
 		if (!localStorage.getItem('playedToday')) {
   window.location.href = 'index.html';
 }
@@ -419,7 +421,7 @@ let streak = parseInt(localStorage.getItem("streak"), 10);
   }
 } else {
   result1MessageElement.textContent = "Out for a duck!";
-  result2MessageElement.textContent = "You didn't get today's Crickdle. The correct answer is TROTT.";
+	result2MessageElement.textContent = "You didn't get today's Crickdle. The correct answer is " + correctPlayer + ".";
   streak = 0;
   localStorage.setItem("streak", streak.toString());
 }
